--- a/secao02/dependencies/requirements.txt
+++ b/secao02/dependencies/requirements.txt
@@ -1,3 +1,9 @@
-fastapi>=0.68.0,<0.69.0
-pydantic>=1.8.0,<2.0.0
-uvicorn>=0.15.0,<0.16.0
+asgiref==3.6.0
+click==8.1.3
+fastapi==0.68.2
+gunicorn==20.1.0
+h11==0.14.0
+pydantic==1.10.7
+starlette==0.14.2
+typing_extensions==4.5.0
+uvicorn==0.15.0
