--- a/secao03/Dockerfile
+++ b/secao03/Dockerfile
@@ -1,10 +1,1 @@
-FROM python:3.9
-
-WORKDIR /code
-
-COPY ./dependencies/requirements.txt /code/requirements.txt
-RUN pip install --no-cache-dir --upgrade -r /code/requirements.txt
-
-COPY ./app /code/app
-
-CMD ["uvicorn", "app.main:app", "--proxy-headers", "--host", "0.0.0.0", "--reload"]
+FROM rafaso/famp-env:01
